Rewrite in solidJS with a sqlite db for icons

--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "svg-repo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
-  }
+    "name": "svg-repo",
+    "module": "index.ts",
+    "type": "module",
+    "private": true,
+    "devDependencies": {
+        "@biomejs/biome": "^1.9.4",
+        "@types/bun": "latest"
+    },
+    "peerDependencies": {
+        "typescript": "^5"
+    },
+    "workspaces": ["apps/frontend", "apps/backend"],
+    "trustedDependencies": ["@biomejs/biome"]
 }
