Add vercel api route file

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,7 @@
     "name": "backend",
     "type": "module",
     "scripts": {
-        "dev": "bun run --hot src/index.ts"
+        "dev": "bun run --hot src/server.ts"
     },
     "dependencies": {
         "hono": "^4.7.9"
